# DataStructures

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: BinaryTree.h  Data.h  Node.h  SinglyLinkedList.h
src/: main.cpp
tests/: CMakeLists.txt  tst_binarytree.cpp  tst_singlylinkedlist.cpp
